# mcp-nix

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: publish.yml  publish_pyixx.yml  pyixx.yml  test.yml
docs/: REFERENCE.md
mcp_nix/: __init__.py  cache.py  homemanager.py  models.py  nix_nomad.py  nixhub.py  noogle.py  nuschtos.py  options.py  search.py  sources.py  tools.py  utils.py
mcp_nixos_search/: __init__.py  homemanager.py  models.py  search.py  tools.py
pyixx/src/: lib.rs
tests/: test_cache.py  test_e2e.py  test_resolution.py
tests/__snapshots__/: test_e2e.ambr
