[project]
name = "mcp-nixos-search"
version = "0.1.0"
description = "MCP server for searching NixOS packages, options, and Home Manager options"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
authors = [
    { name = "Félix Dorn", email = "dorn@xfe.li" }
]
keywords = [
    "mcp",
    "nixos",
    "nix",
    "home-manager",
    "claude",
    "ai",
    "llm",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
    "pyyaml>=6.0.0",
    "lunr>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/felixdorn/mcp-nix"
Repository = "https://github.com/felixdorn/mcp-nix"
Issues = "https://github.com/felixdorn/mcp-nix/issues"

[project.scripts]
mcp-nixos-search = "mcp_nixos_search:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_nixos_search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]
